<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextName"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameLabel"
        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewEmailLabel"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewIDLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailLabel"
        app:layout_constraintVertical_bias="0.094" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/enter_id"
        android:inputType= "number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toEndOf="@+id/textViewIDLabel"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textViewDeptLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dept_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewIDLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewIDLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewIDLabel"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/buttonSelect"
        style="@style/Theme.Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#d3d3d3"
        android:text="@string/select_label"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextID"
        app:layout_constraintVertical_bias="0.051" />

    <Button
        android:id="@+id/buttonSubmit"
        style="@style/Theme.Registration"
        android:layout_width="347dp"
        android:layout_height="48dp"
        android:backgroundTint="#d3d3d3"
        android:text="@string/submit_label"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelect"
        app:layout_constraintVertical_bias="0.802" />

    <TextView
        android:id="@+id/textViewDeptResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDeptLabel"
        app:layout_constraintEnd_toStartOf="@+id/buttonSelect"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toEndOf="@+id/textViewDeptLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewDeptLabel"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>