<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <TextView
        android:id="@+id/textViewProfileNamelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_profile"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/textViewProfileEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_profile"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewProfileNamelabel"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="@+id/textViewProfileNamelabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileNamelabel"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/textViewProfileIDLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_profile"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewProfileEmailLabel"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/textViewProfileEmailLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileEmailLabel"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/textViewProfileDeptLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dept_profile"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewProfileIDLabel"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="@+id/textViewProfileIDLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileIDLabel"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/textViewProfileNameresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_result_profile"
        app:layout_constraintBottom_toBottomOf="@+id/textViewProfileNamelabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toEndOf="@+id/textViewProfileNamelabel"
        app:layout_constraintTop_toTopOf="@+id/textViewProfileNamelabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewProfileEmailResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_result_profile"
        app:layout_constraintBottom_toBottomOf="@+id/textViewProfileEmailLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toEndOf="@+id/textViewProfileEmailLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewProfileEmailLabel" />

    <TextView
        android:id="@+id/textViewProfileIDResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_result_profile"
        app:layout_constraintBottom_toBottomOf="@+id/textViewProfileIDLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/textViewProfileIDLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewProfileIDLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewProfileDeptResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textViewProfileDeptLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toEndOf="@+id/textViewProfileDeptLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewProfileDeptLabel"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>